[package]
name = "calloop-notify"
version = "0.1.1"
description = "Calloop adapter for Notify"
authors = ["Christian Duerr <contact@christianduerr.com>"]
homepage = "https://github.com/chrisduerr/calloop-notify"
rust-version = "1.62.1"
categories = ["asynchronous", "filesystem", "os"]
keywords = ["notify", "calloop", "events", "filesystem", "watch"]
license = "MIT"
edition = "2021"

[dependencies]
notify = "5.0.0-pre.15"
calloop = "0.10.1"
