[package]
name = "calloop-notify"
version = "0.2.0"
description = "Calloop adapter for Notify"
authors = ["Christian Duerr <contact@christianduerr.com>"]
homepage = "https://github.com/chrisduerr/calloop-notify"
rust-version = "1.85.0"
categories = ["asynchronous", "filesystem", "os"]
keywords = ["notify", "calloop", "events", "filesystem", "watch"]
license = "MIT"
edition = "2024"

[dependencies]
notify = "8.1.0"
calloop = "0.14.2"
